git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/bp-group-calendar@59 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-1.0.0 - 10/30/2009
+1.0.2 - 11/11/2009
+----------------------------------------------------------------------
+- Added a widget to display upcoming events from public groups
+
+1.0.1 - 10/30/2009
 ----------------------------------------------------------------------
 - Fixed CSS clearing bug in premium themes: http://premium.wpmudev.org/forums/topic/bp-group-calendar?replies=2#post-17758
 
