--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.3.9 - 5/19/2014
+----------------------------------------------------------------------
+- Fix: Dates were being output in the wrong timezone
+
 1.3.8 - 3/19/2014
 ----------------------------------------------------------------------
 - Fix: Entities problem with quotes in event emails http://wp.mu/91j
