--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.3.4 - 9/1/2014
+----------------------------------------------------------------------
+- Fix: Highlighted events in the calendars were showing as UTC.
+
 1.3.9 - 5/19/2014
 ----------------------------------------------------------------------
 - Fix: Dates were being output in the wrong timezone
