Fix: More timezone issues with highlighted events in the calendars Fix: Various PHP notices

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.1 - 9/4/2014
+----------------------------------------------------------------------
+- Fix: More timezone issues with highlighted events in the calendars
+- Fix: Various PHP notices
+
 1.4 - 9/1/2014
 ----------------------------------------------------------------------
 - Fix: Highlighted events in the calendars were showing as UTC.
