--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.2 - 10/14/2014
+----------------------------------------------------------------------
+- Fix: Improve the check for 24hr time localization to work with custom format strings
+
 1.4.1 - 9/4/2014
 ----------------------------------------------------------------------
 - Fix: More timezone issues with highlighted events in the calendars
