Fix: Widget and class notices in WP4.3

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix: Widget and class notices in WP4.3
+
 1.4.5 - 9/2/2015 Aaron
 ----------------------------------------------------------------------
 - Fix: CSS conflict with Twentyfifteen theme theme update in WP4.3
