--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.6 - 10/19/2015 Aaron
+----------------------------------------------------------------------
 - Fix: Widget and class notices in WP4.3
 
 1.4.5 - 9/2/2015 Aaron
