--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.7 - 05/28/2017 Ashok
+----------------------------------------------------------------------
+- Fix: Creating duplicate even when refreshed after creating an event
+
 1.4.6 - 10/19/2015 Aaron
 ----------------------------------------------------------------------
 - Fix: Widget and class notices in WP4.3
