--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.8 - 05/29/2017 Ashok
+----------------------------------------------------------------------
+- Fix: Notice for missing dev dashboard file
+
 1.4.7 - 05/28/2017 Ashok
 ----------------------------------------------------------------------
 - Fix: Creating duplicate even when refreshed after creating an event
