--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4.9 - 08/18/2017 Aaron
+----------------------------------------------------------------------
+- Fix: Deprecated notices for old class constructors
+
 1.4.8 - 05/29/2017 Ashok
 ----------------------------------------------------------------------
 - Fix: Notice for missing dev dashboard file
