--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,13 @@ Author: Aaron Edwards (Incsub)
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+1.5.0 - 10/17/2022 lenasterg
+----------------------------------------------------------------------
+- Fix: PHP 8+ compatible
+- BuddyPress 10.4.0 compatible
+- WordPress 6.0 
+- Added Greek language file
+
 
 1.4.9 - 08/18/2017 Aaron
 ----------------------------------------------------------------------
