--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,10 @@ Author: Aaron Edwards (Incsub)
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+1.5.1 - 10/18/2022 lenasterg
+- Remove wpmudev dash notification
+
+
 1.5.0 - 10/17/2022 lenasterg
 ----------------------------------------------------------------------
 - Fix: PHP 8+ compatible
